clusters/hive/apps/syncthing/k8s-manifests/syncthing.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: syncthing
spec:
  ingressClassName: traefik
  rules:
    - host: syncthing.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: syncthing
                port:
                  number: 8384
            path: /
            pathType: Prefix
